# scConcept

./: .cruft.json  .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  panel_design.ipynb  pyproject.toml  setup.py  test_encode_implementation.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml
.uv/: settings.toml
concept/: model.py
concept/data/: datamodules.py
concept/modules/: FlashMHA.py  FlashMHA_v2.py  __init__.py  flash_attention_layer.py  flash_attention_layer_v3.py  mha.py  sanity_check_test.py  transformer.py  utils.py
concept/test/: merge_embs.py
conf/model/: StandardModel.yaml
conf/split/: split_hlca.yaml  split_v1.yaml  split_v2_spatial_test.yaml
contrastive_transformer/: model.py  validate.py
contrastive_transformer/data/: datamodules.py  samplers.py
contrastive_transformer/modules/: flash_attention_layer_v2.py  td_layer.py
contrastive_transformer/test/: get_embs.py
docs/: api.md  conf.py  index.md  installation.md  pretraining.md
docs/notebooks/: embedding_extraction.ipynb  example.ipynb  mutual_information_estimation.ipynb
scripts/: setup_env.sh  setup_env_dev.sh  setup_uv.sh
src/concept/: __init__.py  api.py  dataset.py  decoder_model.py  get_embs.py  get_embs_inmemory.py  model.py  scConcept.py  tensor_gather.py  train.py  train_decoder.py  train_fabric.py  utils.py  validate.py
src/concept/conf/: config.yaml
src/concept/conf/datamodule/: DataModuleAdvanced.yaml  DataModuleAdvancedLarge.yaml  DataModuleAdvancedPrimary_2023_Primary_OtherSpecies.yaml  DataModuleAdvanced_2023_Primary.yaml  DataModuleAdvanced_2023_Primary_HumanMouse.yaml  DataModuleAdvanced_2023_Primary_Mouse.yaml  DataModuleAdvanced_2023_old.yaml  DataModuleAdvanced_2025_Large.yaml  DataModuleAdvanced_2025_Primary.yaml  DataModuleBasic.yaml  GeneToken.yaml
src/concept/conf/datamodule/split_cellxgene_cjacchus/: split_cellxgene_cjacchus_2025_11_08_all.yaml  split_cellxgene_cjacchus_2025_11_08_primary.yaml
src/concept/conf/datamodule/split_cellxgene_hsapiens/: split_cellxgene_hsapiens_2023_12_15_all.yaml  split_cellxgene_hsapiens_2023_12_15_old.yaml  split_cellxgene_hsapiens_2023_12_15_primary.yaml  split_cellxgene_hsapiens_2025_11_08_all.yaml  split_cellxgene_hsapiens_2025_11_08_primary.yaml
src/concept/conf/datamodule/split_cellxgene_mmulatta/: split_cellxgene_mmulatta_2025_11_08_all.yaml  split_cellxgene_mmulatta_2025_11_08_primary.yaml
src/concept/conf/datamodule/split_cellxgene_mmusculus/: split_cellxgene_mmusculus_2023_12_15.yaml  split_cellxgene_mmusculus_2023_12_15_all.yaml  split_cellxgene_mmusculus_2023_12_15_primary.yaml  split_cellxgene_mmusculus_2025_11_08_all.yaml  split_cellxgene_mmusculus_2025_11_08_primary.yaml
src/concept/conf/datamodule/split_cellxgene_ptroglodytes/: split_cellxgene_ptroglodytes_2025_11_08_all.yaml  split_cellxgene_ptroglodytes_2025_11_08_primary.yaml
src/concept/conf/datamodule/split_scbasecount_athaliana/: split_scbasecount_athaliana_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_btaurus/: split_scbasecount_btaurus_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_celegans/: split_scbasecount_celegans_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_cjacchus/: split_scbasecount_cjacchus_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_dmelanogaster/: split_scbasecount_dmelanogaster_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_drerio/: split_scbasecount_drerio_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_ecaballus/: split_scbasecount_ecaballus_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_ggallus/: split_scbasecount_ggallus_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_ggorilla/: split_scbasecount_ggorilla_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_hgfemale/: split_scbasecount_hgfemale_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_hsapiens/: split_scbasecount_hsapiens_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_mmulatta/: split_scbasecount_mmulatta_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_mmusculus/: split_scbasecount_mmusculus_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_oaries/: split_scbasecount_oaries_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_ocuniculus/: split_scbasecount_ocuniculus_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_osativa/: split_scbasecount_osativa_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_ptroglodytes/: split_scbasecount_ptroglodytes_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_slycopersicum/: split_scbasecount_slycopersicum_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_smansoni/: split_scbasecount_smansoni_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_sscrofa/: split_scbasecount_sscrofa_2025_02_25.yaml
src/concept/conf/datamodule/split_scbasecount_zmays/: split_scbasecount_zmays_2025_02_25.yaml
src/concept/conf/model/: BiEncoderContrastiveModel.yaml  ContrastiveModel.yaml
src/concept/conf/split/: split_v1_test.yaml  split_v2_spatial.yaml
src/concept/data/: __init__.py  collate.py  datamodules.py  samplers.py  utils.py
src/concept/decoder/: __init__.py  decoder_model.py  train_decoder.py
src/concept/modules/: bert_padding.py  flash_attention_layer.py  flash_attention_layer_v2.py  mha.py  te_layer.py  transformer.py
tests/: conftest.py  test_api_mutual_information.py  test_basic.py  test_decoder.py  test_flash_attention_compat.py  test_gene_mapping_helpers.py  test_integration.py  test_samplers.py
