[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contrastive_transformer"
version = "0.1.0"
description = "Contrastive Transformer for Single-Cell Genomics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mojtaba Bahrami", email = "mojtaba.bahrami@helmholtz-munich.de"}
]
maintainers = [
    {name = "Mojtaba Bahrami", email = "mojtaba.bahrami@helmholtz-munich.de"}
]
keywords = ["single-cell", "transformer", "contrastive-learning", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = "==3.10.*"
dependencies = [
    "numpy",
    "pandas",
    "torch==2.6.0",
    "torchvision",
    "lightning",
    "scanpy>=1.10.0",
    "hydra-core",
    "wandb==0.20",
    "anndata",
    "torchmetrics",
    "h5py",
    "tqdm",
    "einops",
    "ninja",
    "lamindb==1.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
jupyter = [
    "jupyterlab",
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/theislab/contrastive-transformer"
Repository = "https://github.com/theislab/contrastive-transformer"
Documentation = "https://github.com/theislab/contrastive-transformer"
"Bug Tracker" = "https://github.com/theislab/contrastive-transformer/issues"

[tool.hatch.build.targets.wheel]
packages = ["contrastive_transformer"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["contrastive_transformer"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=contrastive_transformer",
    "--cov-report=term-missing",
    "--cov-report=html",
] 
