[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "sc-concept"
version = "0.2.0"
description = "code for scConcept"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Mojtaba Bahrami", email = "bahrami.mojtaba.93@gmail.com" },
]
authors = [
  { name = "Mojtaba Bahrami" },
]
requires-python = ">=3.12,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anndata",
  # for debug logging (referenced from the issue template)
  "session-info2",
  "numpy",
  "pandas",
  "torch==2.9",
  "torchvision",
  "lightning",
  "scanpy>=1.10.0",
  "hydra-core",
  "wandb>=0.20",
  "anndata",
  "torchmetrics",
  "h5py",
  "tqdm",
  "einops",
  "ninja",
  "huggingface-hub>=0.34.0,<1.0",
  "torchdata>=0.11.0",
  "lamin-dataloader>=0.2.0",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://scConcept.readthedocs.io/"
urls.Homepage = "https://github.com/theislab/scConcept"
urls.Source = "https://github.com/theislab/scConcept"

[dependency-groups]
dev = [
  "pre-commit",
  "twine>=4.0.2",
  "torch-tb-profiler>=0.4.3",
  "jupyterlab>=4.5.0",
]
test = [
  "coverage>=7.10",
  "pytest",
]
doc = [
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "pandas",
  "sphinx>=8.1,<9.0",  # https://github.com/vidartf/nbsphinx-link/pull/26
  "sphinx-tabs",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinxcontrib-bibtex>=1",
  "sphinxcontrib-katex",
  "sphinxext-opengraph",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch]
envs.default.installer = "uv"
envs.default.dependency-groups = [ "dev" ]
envs.docs.dependency-groups = [ "doc" ]
envs.docs.scripts.build = "sphinx-build -M html docs docs/_build --keep-going {args}"
envs.docs.scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
envs.docs.scripts.clean = "git clean -fdX -- {args:docs}"
envs.hatch-test.dependency-groups = [ "dev", "test" ]
envs.hatch-test.matrix = [
# Test the lowest and highest supported Python versions with normal deps
  { deps = [ "stable" ], python = [ "3.12", "3.14" ] },
# Test the newest supported Python version also with pre-release deps
  { deps = [ "pre" ], python = [ "3.14" ] },
]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
envs.hatch-test.overrides.matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]
build.targets.wheel.packages = [ "src/concept" ]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don’t want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest]
strict = true
testpaths = [ "tests" ]
addopts = [
  "--import-mode=importlib", # allow using test files with same name
  "--cache-clear", # clear cache before running tests
]

[tool.coverage]
run.omit = [
  "**/test_*.py",
]
run.patch = [ "subprocess" ]
run.source = [ "concept" ]

[tool.cruft]
skip = [
  ".git",
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
